--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -927,22 +927,19 @@ carc_sample_size = function(j) {
 # for completely disaggregated fits
 carc_comp_fit_plot = function(j) {
   
-  # calculate observed q
-  q_obs = t(apply(jags_data$carc_x_obs[,,j], 1, function(y) y/sum(y)))
-
   par(mfcol = c(3,4), oma = c(1.5,1.5,0,0))#, mar = c(1.5,1.5,1.5,0.5))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,1,pop]$", pop = j)), q_obs[observable,1], main = TeX("$Female\\,Age\\,3\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,2,pop]$", pop = j)), q_obs[observable,2], main = TeX("$Female\\,Age\\,4\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,3,pop]$", pop = j)), q_obs[observable,3], main = TeX("$Female\\,Age\\,5\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,4,pop]$", pop = j)), q_obs[observable,4], main = TeX("$Male\\,Age\\,3\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,5,pop]$", pop = j)), q_obs[observable,5], main = TeX("$Male\\,Age\\,4\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,6,pop]$", pop = j)), q_obs[observable,6], main = TeX("$Male\\,Age\\,5\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,7,pop]$", pop = j)), q_obs[observable,7], main = TeX("$Female\\,Age\\,3\\,(HOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,8,pop]$", pop = j)), q_obs[observable,8], main = TeX("$Female\\,Age\\,4\\,(HOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,9,pop]$", pop = j)), q_obs[observable,9], main = TeX("$Female\\,Age\\,5\\,(HOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,10,pop]$",pop = j)), q_obs[observable,10], main = TeX("$Male\\,Age\\,3\\,(HOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,11,pop]$",pop = j)), q_obs[observable,11], main = TeX("$Male\\,Age\\,4\\,(HOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,12,pop]$",pop = j)), q_obs[observable,12], main = TeX("$Male\\,Age\\,5\\,(HOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 1), main = TeX("$Female\\,Age\\,3\\,(NOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 2), main = TeX("$Female\\,Age\\,4\\,(NOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,3,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 3), main = TeX("$Female\\,Age\\,5\\,(NOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,4,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 4), main = TeX("$Male\\,Age\\,3\\,(NOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,5,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 5), main = TeX("$Male\\,Age\\,4\\,(NOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,6,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 6), main = TeX("$Male\\,Age\\,5\\,(NOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,7,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 7), main = TeX("$Female\\,Age\\,3\\,(HOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,8,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 8), main = TeX("$Female\\,Age\\,4\\,(HOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,9,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 9), main = TeX("$Female\\,Age\\,5\\,(HOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,10,pop]$",pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 10), main = TeX("$Male\\,Age\\,3\\,(HOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,11,pop]$",pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 11), main = TeX("$Male\\,Age\\,4\\,(HOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,12,pop]$",pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 12), main = TeX("$Male\\,Age\\,5\\,(HOR)$"))
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Carcasses")
 }
@@ -950,9 +947,9 @@ carc_comp_fit_plot = function(j) {
 # for fits to each age, aggregated across sexes and origins
 carc_comp_fit_plot_age = function(j) {
   par(mfcol = c(1,3), oma = c(1.5,1.5,0,0))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[.+,1,pop]$", pop = j)), q_carc_new_obs$q_carc_age_obs[observable,1,j], main = TeX("$Age\\,3$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[.+,2,pop]$", pop = j)), q_carc_new_obs$q_carc_age_obs[observable,2,j], main = TeX("$Age\\,4$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[.+,3,pop]$", pop = j)), q_carc_new_obs$q_carc_age_obs[observable,3,j], main = TeX("$Age\\,5$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_age_obs[observable,,j], 1), main = TeX("$Age\\,3$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_age_obs[observable,,j], 2), main = TeX("$Age\\,4$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[.+,3,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_age_obs[observable,,j], 3), main = TeX("$Age\\,5$"))
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 }
@@ -960,8 +957,8 @@ carc_comp_fit_plot_age = function(j) {
 # for fits to each sex, aggregated across ages and origins
 carc_comp_fit_plot_sex = function(j) {
   par(mfcol = c(1,2), oma = c(1.5,1.5,0,0))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_sex[.+,1,pop]$", pop = j)), q_carc_new_obs$q_carc_sex_obs[observable,1,j], main = TeX("$Females$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_sex[.+,2,pop]$", pop = j)), q_carc_new_obs$q_carc_sex_obs[observable,2,j], main = TeX("$Males$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_sex[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_sex_obs[observable,,j], 1), main = TeX("$Females$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_sex[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_sex_obs[observable,,j], 2), main = TeX("$Males$"))
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 }
@@ -969,8 +966,8 @@ carc_comp_fit_plot_sex = function(j) {
 # for fits to each origin, aggregated across ages and sexes
 carc_comp_fit_plot_origin = function(j) {
   par(mfcol = c(1,2), oma = c(1.5,1.5,0,0))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_origin[.+,1,pop]$", pop = j)), q_carc_new_obs$q_carc_origin_obs[observable,1,j], main = TeX("$NOR$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_origin[.+,2,pop]$", pop = j)), q_carc_new_obs$q_carc_origin_obs[observable,2,j], main = TeX("$HOR$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_origin[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_origin_obs[observable,,j], 1), main = TeX("$NOR$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_origin[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_origin_obs[observable,,j], 2), main = TeX("$HOR$"))
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 }
