Add a table showing WAIC results

--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -401,6 +401,31 @@ kable(kable_table, row.names = FALSE, align = c("lllcccccccccc")) %>%
   collapse_rows(columns = 1:2)
 ```
 
+## WAIC
+
+WAIC is a measure of model parsimony. The quantity `pD` is an index of model complexity (i.e., "effective parameters") and `deviance` is an index of model fit to the data. There are two methods of calculating `pD`, both are shown below. As for other measures like AIC or BIC, these numbers are really only relevant for comparing among models fitted to the same data set.
+
+```{r calculate-waic}
+summarize_lppd = function(param, LH_type = NULL, origin = NULL, pop = NULL) {
+  # calculate total lppd summed across all data sets within a given year
+  total_lppd = sapply(observable, function(y) rowSums(post_subset(post, sub_index(param, year = y, LH_type = LH_type, origin = origin, pop = pop), matrix = TRUE)))
+  
+  tmp_log = log(apply(exp(total_lppd), 2, mean))
+  tmp_sum = -2 * sum(tmp_log)
+  
+  pD1 = 2 * sum(tmp_log - apply(total_lppd, 2, mean))
+  pD2 = sum(apply(total_lppd, 2, var))
+  round(c(deviance = tmp_sum, pD1 = pD1, pD2 = pD2, WAIC1 = tmp_sum + 2 * pD1, WAIC2 = tmp_sum + 2 * pD2))
+}
+
+waic_out = summarize_lppd("_lppd[year,.+]$")
+
+waic_out = as.data.frame(as.list(waic_out))
+waic_out %>%
+  kbl(format.args = list(big.mark = ",")) %>%
+  kable_styling(full_width = FALSE, bootstrap_options = c("condensed"))
+```
+
 ## Posterior Predictive Checks
 
 This output is a diagnostic of the consistency of variability in the data with the variability assumed by the model. For each observed data point and MCMC iteration, a value was simulated from the model. The fit of the observed and simulated data was calculated, and the proportion of MCMC iterations in which the observed data fitted more poorly than the simulated data (i.e., a Bayesian p-value) was calculated. P-values close the 0.5 are ideal (0.4 -- 0.6 have no color below), values closer to 1 (red below) indicate over-dispersion (i.e., model fits real data worse than expected), and values closer to 0 (blue below) indicate under-dispersion (i.e., model fits real data better than expected). Across years within a data set, p-values were summarized as the median and central 95% intervals. The left two columns show the percent of years that had extreme p-values, providing another indication of how often the model fit the real data far better (<0.05) or worse (>0.95) than expected.
@@ -1350,6 +1375,8 @@ plot_f = function(j) {
 
 junk = sapply(1:jags_data$nj, plot_f)
 ```
+
+
 
 # Spawner-to-Parr Relationship {.tabset .tabset-pills}
 
