--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -1900,18 +1900,50 @@ junk = sapply(1:jags_data$nj, plot_fn)
 mtext(side = 2, outer = T, line = 0.25, "Proportion of Strays by Age/Sex")
 ```
 
-# Ocean Survival
+# Ocean Survival {.tabset .tabset-pills}
 
 ```{r ocean-surv-plots, fig.width = 6, fig.height = 5}
-par(mfrow = c(3,2), oma = c(1.5,1.5,0,0))
-plot_tseries(post_summ(post, "phi_O0_O1[.+,1]$"), main = TeX("$O_0 \\rightarrow O_1\\,(NOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_O0_O1[.+,2]$"), main = TeX("$O_0 \\rightarrow O_1\\,(HOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_O1_O2[.+,1]$"), main = TeX("$O_1 \\rightarrow O_2\\,(NOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_O1_O2[.+,2]$"), main = TeX("$O_1 \\rightarrow O_2\\,(HOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_O2_O3[.+,1]$")[,2:(length(observable)+1)], main = TeX("$O_2 \\rightarrow O_3\\,(NOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_O2_O3[.+,2]$")[,2:(length(observable)+1)], main = TeX("$O_2 \\rightarrow O_3\\,(HOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-mtext(side = 1, outer = T, line = 0.5, "Brood Year")
-mtext(side = 2, outer = T, line = 0, "Survival")
+ocean_surv_plot = function(j) {
+  par(mfrow = c(3,2), oma = c(1.5,1.5,0,0))
+  plot_tseries(post_summ(post, sub_index("^phi_O0_O1[.+,origin,pop]", origin = o_nor, pop = j)),
+               main = TeX("$O_0 \\rightarrow O_1\\,(NOR)$"), yrs = all_yrs[observable], ylim = c(0,1))
+  plot_tseries(post_summ(post, sub_index("^phi_O0_O1[.+,origin,pop]", origin = o_hor, pop = j)),
+               main = TeX("$O_0 \\rightarrow O_1\\,(HOR)$"), yrs = all_yrs[observable], ylim = c(0,1))
+  plot_tseries(post_summ(post, sub_index("^phi_O1_O2[.+,origin,pop]", origin = o_nor, pop = j)),
+               main = TeX("$O_1 \\rightarrow O_2\\,(NOR)$"), yrs = all_yrs[observable], ylim = c(0,1))
+  plot_tseries(post_summ(post, sub_index("^phi_O1_O2[.+,origin,pop]", origin = o_hor, pop = j)),
+               main = TeX("$O_1 \\rightarrow O_2\\,(HOR)$"), yrs = all_yrs[observable], ylim = c(0,1))
+  plot_tseries(post_summ(post, sub_index("^phi_O2_O3[.+,origin,pop]", origin = o_nor, pop = j)),
+               main = TeX("$O_2 \\rightarrow O_3\\,(NOR)$"), yrs = all_yrs[observable], ylim = c(0,1))
+  plot_tseries(post_summ(post, sub_index("^phi_O2_O3[.+,origin,pop]", origin = o_hor, pop = j)),
+               main = TeX("$O_2 \\rightarrow O_3\\,(HOR)$"), yrs = all_yrs[observable], ylim = c(0,1))
+  mtext(side = 1, outer = T, line = 0.5, "Brood Year")
+  mtext(side = 2, outer = T, line = 0, "Survival")
+}
+```
+
+## CAT
+
+```{r}
+ocean_surv_plot(j_cat)
+```
+
+## LOS
+
+```{r}
+ocean_surv_plot(j_los)
+```
+
+## MIN
+
+```{r}
+ocean_surv_plot(j_min)
+```
+
+## UGR
+
+```{r}
+ocean_surv_plot(j_ugr)
 ```
 
 # Sex Apportionment
