--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -2020,7 +2020,7 @@ my_boxplot = function(params, ylab = NULL, ticklabs = pops, ylim = NULL, boxfill
   bp = boxplot(post_sub, plot = FALSE)
   
   # replace the summary stats with my preferred quantiles
-  par(mar = c(2,3,1,1), mgp = c(2,0.35,0), tcl = -0.15)
+  par(mar = c(5,3,1,1), mgp = c(2,0.35,0), tcl = -0.15)
   bp$stats = apply(post_sub, 2, function(x) quantile(x, c(0.025, 0.25, 0.5, 0.75, 0.975)))
   bxp(bp, ylab = ylab, xlab = "", outline = FALSE, ylim = ylim, ...,
       staplelty = 0, whisklty = 1, boxfill = boxfill, boxcol = border, medcol = border, whiskcol = border)
@@ -2145,20 +2145,45 @@ my_boxplot(sub_index("mu_psi_O2_Rb[sex,origin,pop]", sex = s_male, origin = o_ho
 
 ## Ocean Survival {.tabset .tabset-pills}
 
-### Year 1
+### Year 1 {.tabset .tabset-pills}
+
+#### Mean
 
 ```{r yr1-ocean-bxp, fig.width = 8, fig.height = 3.5}
 par(mfrow = c(1,2))
-my_boxplot(sub_index("mu_phi_O0_O1[origin]", origin = "."), ticklabs = c("NOR", "HOR"), ylim = c(0,1), ylab = "Average Survival")
-my_boxplot("sig_Lphi_O0_O1", ylab = "Process SD")
+my_boxplot(sub_index("mu_phi_O0_O1[origin,pop]", origin = o_nor, pop = "."), main = "NOR", ylim = c(0,1), ylab = "Average Survival")
+my_boxplot(sub_index("mu_phi_O0_O1[origin,pop]", origin = o_hor, pop = "."), main = "HOR", ylim = c(0,1), ylab = "Average Survival")
 ```
 
-### Year 2
+#### Process SD and Correlation
+
+```{r yr1-ocean-bxp2, fig.width = 8, fig.height = 3.5}
+par(mfrow = c(1,3))
+my_boxplot(sub_index("sig_Lphi_O0_O1[pop]", pop = "."), ylab = "Process SD")
+my_boxplot(sub_index("kappa_phi_O0_O1[pop]", pop = "."), ylab = "Autocorrelation")
+my_boxplot("rho_Lphi_O0_O1[", ticklabs = vcov_labels, ylab = "Among Population Correlation", ylim = c(-1,1), las = 2)
+```
+
+### Year 2 {.tabset .tabset-pills}
 
 ```{r yr2-ocean-bxp, fig.width = 8, fig.height = 3.5}
 par(mfrow = c(1,2))
-my_boxplot(sub_index("mu_phi_O1_O2[origin]", origin = "."), ticklabs = c("NOR", "HOR"), ylim = c(0,1), ylab = "Average Survival")
-my_boxplot("sig_Lphi_O1_O2", ylab = "Process SD")
+my_boxplot(sub_index("mu_phi_O1_O2[origin,pop]", origin = o_nor, pop = "."), main = "NOR", ylim = c(0,1), ylab = "Average Survival")
+my_boxplot(sub_index("mu_phi_O1_O2[origin,pop]", origin = o_hor, pop = "."), main = "HOR", ylim = c(0,1), ylab = "Average Survival")
+```
+
+### Year 3 {.tabset .tabset-pills}
+
+```{r yr3-ocean-bxp, fig.width = 8, fig.height = 3.5}
+par(mfrow = c(1,2))
+my_boxplot(sub_index("mu_phi_O2_O3[origin,pop]", origin = o_nor, pop = "."), main = "NOR", ylim = c(0,1), ylab = "Average Survival")
+my_boxplot(sub_index("mu_phi_O2_O3[origin,pop]", origin = o_hor, pop = "."), main = "HOR", ylim = c(0,1), ylab = "Average Survival")
+```
+
+### NOR:HOR Log Odds Ratio
+
+```{r ocean-surv-scaler, fig.width = 8, fig.height = 3.5}
+my_boxplot(sub_index("O_phi_scaler_nat_hat[pop]", pop = "."), ylab = "Log Odds Ratio")
 ```
 
 ## Movement Survival BON to LGR
