Change sigma_Pb to sig_Pb throughout
For consistency with other SD terms

--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -214,7 +214,7 @@ diag_fn = function(params, L1 = NA, L2 = NA, L3 = NA) {
 # parr recruitment
 L1 = "Parr Recruitment"
 L2 = c("BH Productivity", "BH Capacity", "Process SD", "Parr States")
-match = c("alpha", "^beta[", "sigma_Pb", "^Pb[")
+match = c("alpha", "^beta[", "sig_Pb", "^Pb[")
 parr_recruit_diags = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i])))
 
 # LH apportionment
@@ -1855,7 +1855,7 @@ my_boxplot = function(params, ylab = NULL, ticklabs = pops, ylim = NULL, boxfill
 par(mfrow = c(1,3))
 my_boxplot("^alpha[.]$", "Productivity")
 my_boxplot("^beta[.]$", "Capacity")
-my_boxplot("^sigma_Pb[.]$", "Process SD")
+my_boxplot("^sig_Pb[.]$", "Process SD")
 ```
 
 ## Life History Apportionment
